Uses Collections.emptyMap() for empty POST body.